--- a/css/screen.css
+++ b/css/screen.css
@@ -63,6 +63,38 @@
   --global-input-hover-borderColor: var(--global-color-neutral-xx-light);
   --global-input-focus-borderColor: var(--global-color-alpha);
   --global-input-boxShadow: 0 0 0 3px var(--global-color-alpha-x-transparent);
+  --global-input-placeholderColor: var(--global-color-neutral-x-light);
+
+  /* Global var colors */
+  --global-page-backgroundColor: var(--global-color-neutral-xxxx-light);
+  --global-page-color: var(--global-color-neutral-xxxx-dark);
+
+  --global-card-backgroundColor: White;
+  --global-card-footerColor: var(--global-color-neutral-xxx-light);
+  --global-card-labelColor: var(--global-color-neutral-xx-dark);
+
+  --global-custom-options-backgroundColor: White;
+  --global-custom-options-borderColor: var(--global-color-neutral-xxx-light);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --global-page-backgroundColor: var(--global-color-neutral-xxxx-dark);
+    --global-page-color: white;
+
+    --global-card-backgroundColor: var(--global-color-neutral-xxx-dark);
+    --global-card-footerColor: var(--global-color-neutral-xxxx-dark);
+    --global-card-labelColor: var(--global-color-neutral-x-light);
+
+    --global-input-backgroundColor: var(--global-color-neutral-xxxx-dark);
+    --global-input-borderColor: var(--global-color-neutral-xxxx-dark);
+    --global-input-hover-borderColor: var(--global-color-neutral-xx-dark);
+    --global-input-color: var(--global-color-neutral-xxxx-light);
+    --global-input-placeholderColor: var(--global-color-neutral-dark);
+
+    --global-custom-options-backgroundColor: var(--global-color-neutral-xxxx-dark);
+    --global-custom-options-borderColor: var(--global-color-neutral-xxxx-dark);
+  }
 }
 
 /*------------------------------------*\
@@ -79,8 +111,8 @@ html {
   font-size: 16px;
   line-height: 1.5;
   font-family: 'Inter Web', Helvetica, arial, sans-serif;
-  color: var(--global-color-neutral-xxxx-dark);
-  background-color: var(--global-color-neutral-xxxx-light);
+  color: var(--global-page-color);
+  background-color: var(--global-page-backgroundColor);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -235,7 +267,7 @@ input {
 }
 
 input::placeholder {
-  color: var(--global-color-neutral-x-light);
+  color: var(--global-input-placeholderColor);
 }
 
 /*------------------------------------*\
@@ -521,15 +553,23 @@ input::placeholder {
 }
 
 .c-logo__path--1 {
-  fill: var(--global-color-neutral-xxxx-dark);
+  fill: var(--logo__path--1--fill, var(--global-color-neutral-xxxx-dark));
 }
 
 .c-logo__path--2 {
-  fill: var(--global-color-alpha);
+  fill: var(--logo__path--1--fill, var(--global-color-alpha));
 }
 
 .c-logo__path--3 {
-  fill: var(--color-alpha-x-dark);
+  fill: var(--logo__path--1--fill, var(--color-alpha-x-dark));
+}
+
+@media (prefers-color-scheme: dark) {
+  .c-logo {
+    --logo__path--1--fill: White;
+    --logo__path--2--fill: var(--logo__path--1--fill)
+    --logo__path--3--fill: var(--logo__path--1--fill)
+  }
 }
 
 /*
@@ -539,7 +579,7 @@ input::placeholder {
 */
 
 .c-card {
-  background-color: White;
+  background-color: var(--global-card-backgroundColor);
   margin-bottom: var(--global-whitespace);
   border-radius: var(--global-borderRadius);
   box-shadow: 0 0 0 var(--global-borderWidth) rgba(0, 0, 0, 0.05),
@@ -556,7 +596,7 @@ input::placeholder {
 .c-card__footer {
   text-align: center;
   border-top: var(--global-borderWidth) solid
-    var(--global-color-neutral-xxx-light);
+    var(--global-card-footerColor);
 }
 
 .c-card__title {
@@ -624,7 +664,7 @@ input::placeholder {
 }
 
 .c-input:hover {
-  border-color: var(--global-color-neutral-xx-light);
+  border-color: var(--global-input-hover-borderColor);
 }
 
 .c-input:focus,
@@ -651,7 +691,8 @@ input::placeholder {
   display: flex;
   width: 16px;
   height: 16px;
-  border: 1px solid var(--global-color-neutral-xxx-light);
+  border: 1px solid var(--global-custom-options-borderColor);
+  background-color: var(--global-custom-options-backgroundColor);
   margin-right: 8px;
 }
 
@@ -661,7 +702,7 @@ input::placeholder {
 }
 
 .c-option--hidden:hover + .c-custom-option .c-custom-option__fake-input {
-  border: 1px solid var(--global-color-neutral-xx-light);
+  border: 1px solid var(--global-input-hover-borderColor);
 }
 
 .c-option--hidden + .c-custom-option .c-custom-option__fake-input--checkbox {
@@ -719,7 +760,7 @@ input::placeholder {
   font-size: 14px;
   padding-bottom: var(--global-whitespace-xs);
   line-height: calc(var(--global-baseline) * 2);
-  color: var(--global-color-neutral-xx-dark);
+  color: var(--global-card-labelColor);
 }
 
 .c-label--option {
